Fixed more checkstyle errors